<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DuelDisk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>    
    <string name="splashDescription">Logo di caricamento applicazione</string>
    <string name="button0">0</string>
    <string name="button00">00</string>
    <string name="button000">000</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonMinus">-</string>
    <string name="buttonPlus">+</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonReset">Reset</string>
    <string name="LifePoints">8000</string>
    <string name="Damage">0</string>
    <string name="Dice">Dice: 0</string>
    <string name="Coin">Coint: Head</string>
    <string name="Username">Username!</string>    

</resources>
