<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dueldisk.MainActivity" >

    <Button
        android:id="@+id/button0"
        android:layout_width="160px	"
        android:layout_height="75px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button0"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/button00"
        android:layout_width="160px	"
        android:layout_height="75px"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button00"
        android:background="@drawable/yellow_ground" />"

    <Button
        android:id="@+id/button000"
        android:layout_width="160px	"
        android:layout_height="75px"
        android:layout_alignBaseline="@+id/button00"
        android:layout_alignBottom="@+id/button00"
        android:layout_alignParentRight="true"
        android:text="@string/button000"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/button7"
        android:layout_width="160px	"
        android:layout_height="75px"
        android:layout_above="@+id/button0"
        android:layout_alignLeft="@+id/button0"
        android:text="@string/button7"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/button8"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBottom="@+id/button7"
        android:layout_centerHorizontal="true"
        android:text="@string/button8"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/button9"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignRight="@+id/button000"
        android:text="@string/button9"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/button4"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_above="@+id/button7"
        android:layout_alignLeft="@+id/button7"
        android:text="@string/button4"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/button5"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBottom="@+id/button4"
        android:layout_centerHorizontal="true"
        android:text="@string/button5"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/button6"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignRight="@+id/button9"
        android:text="@string/button6"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/button1"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:text="@string/button1"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:text="@string/button2"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/button3"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignRight="@+id/button6"
        android:text="@string/button3"
        android:background="@drawable/yellow_ground" />

    <Button
        android:id="@+id/buttonPlusSX"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:text="@string/buttonPlus"
        android:background="@drawable/green_ground" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonCancel"
        android:background="@drawable/blue_groud" />

    <Button
        android:id="@+id/buttonPlusDX"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBottom="@+id/buttonCancel"
        android:layout_alignRight="@+id/button3"
        android:text="@string/buttonPlus"
        android:background="@drawable/green_ground" />

    <Button
        android:id="@+id/buttonMinusSX"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_above="@+id/buttonPlusSX"
        android:layout_alignLeft="@+id/buttonPlusSX"
        android:text="@string/buttonMinus"
        android:background="@drawable/red_ground" />

    <Button
        android:id="@+id/buttonMinusDX"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBottom="@+id/buttonMinusSX"
        android:layout_alignRight="@+id/buttonPlusDX"
        android:text="@string/buttonMinus"
        android:background="@drawable/red_ground" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBaseline="@+id/textLifepointsSX"
        android:layout_alignBottom="@+id/textLifepointsSX"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonReset"
        android:background="@drawable/blue_groud" />

    <TextView
        android:id="@+id/textLifepointsSX"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_above="@+id/buttonMinusSX"
        android:layout_alignLeft="@+id/buttonMinusSX"
        android:text="@string/LifePoints"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textLifepointsDX"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBottom="@+id/textLifepointsSX"
        android:layout_toRightOf="@+id/textDamage"
        android:text="@string/LifePoints"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editUsernameDX"
        android:layout_width="220px"
        android:layout_height="75px"
        android:layout_alignBottom="@+id/editUsernameSX"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:textColor="@color/white"
        android:textAlignment="gravity" />

    <TextView
        android:id="@+id/textDamage"
        android:layout_width="160px"
        android:layout_height="75px"
        android:layout_alignBaseline="@+id/buttonMinusDX"
        android:layout_alignBottom="@+id/buttonMinusDX"
        android:layout_alignLeft="@+id/buttonCancel"
        android:gravity="center"
        android:text="@string/Damage"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gold" />

    <EditText
        android:id="@+id/editUsernameSX"
        android:layout_width="220px"
        android:layout_height="75px"
        android:layout_above="@+id/textLifepointsSX"
        android:layout_alignLeft="@+id/textLifepointsSX"
        android:ems="10"
        android:textColor="@color/white"
        android:textAlignment="gravity" />
    
	<ImageView
        android:id="@+id/imageView1"
        android:layout_width="220px"
        android:layout_height="70px"
        android:layout_above="@+id/editUsernameSX"
        android:layout_alignLeft="@+id/editUsernameSX"
        android:src="@drawable/life_points" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220px"
        android:layout_height="70px"
        android:layout_above="@+id/editUsernameDX"
        android:layout_alignRight="@+id/editUsernameDX"
        android:src="@drawable/life_points" />

    <Button
        android:id="@+id/buttonDice"
        android:layout_width="180px"
        android:layout_height="70px"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/buttonReset"
        android:text="@string/Dice"
        android:background="@drawable/grey_ground" />

    <Button
        android:id="@+id/buttonCoin"
        android:layout_width="180px"
        android:layout_height="70px"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/buttonReset"
        android:text="@string/Coin"
        android:background="@drawable/grey_ground" />
    
</RelativeLayout>